criação dashboard e melhoria na documentação
